worked on more functionality

--- a/static/login.html
+++ b/static/login.html
@@ -16,7 +16,7 @@
     <form action="/login" method="POST">
       <input type="text" name="username" />
       <input type="text" name="password" />
-      <input type="submit" value="Login" />
+      <button type="submit">Log In</button>
     </form>
   </body>
 </html>
